[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pause_Menu.gd" type="Script" id=1]
[ext_resource path="res://menuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Options_button.gd" type="Script" id=3]
[ext_resource path="res://Levels/Options_menu.gd" type="Script" id=4]

[node name="Pause_Menu" type="Control"]
pause_mode = 2
margin_left = -20.0
margin_top = -20.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -247.058, 126.923 )
scale = Vector2( 1.47059, 0.615385 )
color = Color( 0.4, 0.384314, 0.384314, 1 )
polygon = PoolVector2Array( 440, 440, 440, 220.578, 460, 200, 590, 200, 610, 218.473, 610, 440, 590, 460, 460, 460 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( -185.293, 152.308 )
scale = Vector2( 1.35294, 0.538461 )
color = Color( 0.670588, 0.639216, 0.639216, 1 )
polygon = PoolVector2Array( 440, 440, 440, 220.578, 460, 200, 590, 200, 610, 218.473, 610, 440, 590, 460, 460, 460 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 440.0
margin_top = 271.0
margin_right = 610.0
margin_bottom = 390.0
custom_constants/separation = 10
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 2.0
margin_right = 170.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 170.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Restart Level"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 170.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Options"
script = ExtResource( 3 )

[node name="Quit_to_Menu" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 170.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "Quit to Menu"

[node name="Options_menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -974.0
margin_bottom = -590.0
script = ExtResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="Options_menu"]
position = Vector2( -110, 38.2601 )
scale = Vector2( 1.28571, 1.09882 )
color = Color( 0.368627, 0.360784, 0.360784, 1 )
polygon = PoolVector2Array( 630, 220, 780, 220, 810, 248.999, 810, 323.998, 780, 350, 630, 350, 600, 320.998, 600, 248.999 )

[node name="Polygon2D2" type="Polygon2D" parent="Options_menu"]
position = Vector2( -44.2858, 86.9231 )
scale = Vector2( 1.19048, 0.923077 )
color = Color( 0.584314, 0.584314, 0.584314, 1 )
polygon = PoolVector2Array( 630, 220, 780, 220, 810, 248.999, 810, 323.998, 780, 350, 630, 350, 600, 320.998, 600, 248.999 )

[node name="VBoxContainer" type="VBoxContainer" parent="Options_menu"]
margin_left = 710.0
margin_top = 300.0
margin_right = 890.0
margin_bottom = 412.0

[node name="Label" type="Label" parent="Options_menu/VBoxContainer"]
margin_right = 180.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
text = "Sound Volume"
align = 1

[node name="HBoxContainer" type="MarginContainer" parent="Options_menu/VBoxContainer"]
margin_top = 19.0
margin_right = 180.0
margin_bottom = 35.0

[node name="Sound_Volume" type="HSlider" parent="Options_menu/VBoxContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 16.0
max_value = 1.0
step = 0.0

[node name="Label2" type="Label" parent="Options_menu/VBoxContainer"]
margin_top = 39.0
margin_right = 180.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "SFX Volume"
align = 1

[node name="HBoxContainer2" type="MarginContainer" parent="Options_menu/VBoxContainer"]
margin_top = 58.0
margin_right = 180.0
margin_bottom = 74.0

[node name="SFX_Volume" type="HSlider" parent="Options_menu/VBoxContainer/HBoxContainer2"]
margin_right = 180.0
margin_bottom = 16.0
max_value = 1.0
step = 0.0

[node name="HSplitContainer" type="HBoxContainer" parent="Options_menu/VBoxContainer"]
margin_top = 78.0
margin_right = 180.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="Options_menu/VBoxContainer/HSplitContainer"]
margin_top = 4.0
margin_right = 97.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Player Sprite"
align = 1

[node name="player_sprite_on" type="CheckBox" parent="Options_menu/VBoxContainer/HSplitContainer"]
margin_left = 101.0
margin_right = 125.0
margin_bottom = 24.0
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="toggled" from="VBoxContainer/Options" to="VBoxContainer/Options" method="_on_Options_toggled"]
[connection signal="pressed" from="VBoxContainer/Quit_to_Menu" to="." method="_on_Quit_to_Menu_pressed"]
[connection signal="value_changed" from="Options_menu/VBoxContainer/HBoxContainer/Sound_Volume" to="Options_menu" method="_on_Sound_Volume_value_changed"]
[connection signal="value_changed" from="Options_menu/VBoxContainer/HBoxContainer2/SFX_Volume" to="Options_menu" method="_on_SFX_Volume_value_changed"]
[connection signal="toggled" from="Options_menu/VBoxContainer/HSplitContainer/player_sprite_on" to="Options_menu" method="_on_player_sprite_on_toggled"]
